# zilbot

./: .env.example  .gitignore  README.md  metrics_sources.example.json  pyproject.toml
dashboard/: app.js  index.html  portal.css  portal.html  server.py  styles.css
dashboard/game/: game.js  index.html  styles.css
dashboard/metrics/: app.js  index.html  styles.css
outputs/: country_sheets_preview.html
scripts/: daily_github_sync.sh  deploy_to_vps.sh  push_metrics_cache_to_vps.sh
src/codex_tg_bot/: __init__.py  app.py  bridge.py  codex_export.py  config.py  extractor.py  maintenance.py  metrics.py  models.py  openai_responder.py  openai_worker.py  routing.py  store.py  transcriber.py
